<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayoutCityName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_40sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:theme="@style/StyledTilEditTextTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
      android:id="@+id/edtName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:hint="@string/city_name" />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayoutPopulation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:theme="@style/StyledTilEditTextTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCityName">

    <EditText
      android:id="@+id/edtPopulation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:hint="@string/city_population" />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayoutState"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:theme="@style/StyledTilEditTextTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPopulation">

    <EditText
      android:id="@+id/edtState"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:hint="@string/state" />
  </android.support.design.widget.TextInputLayout>
  <Button
    android:id="@+id/btnSave"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:text="@string/save"
    android:theme="@style/ButtonTheme.Colored"
    app:layout_constraintEnd_toEndOf="@+id/textInputLayoutState"
    app:layout_constraintStart_toStartOf="@+id/textInputLayoutState"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutState" />

  <Button
    android:id="@+id/btnCancel"
    style="@style/ButtonTheme.Colored.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:text="@string/cancel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnSave" />
</android.support.constraint.ConstraintLayout>